ADLib-4.1/libraries/log
cannot find extension in source file name -I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OSspecific/POSIX/lnInclude
xcrun c++ -arch x86_64 -std=c++14 -Ddarwin64 -DWM_ARCH_OPTION=64 -DWM_DP -DWM_LABEL_SIZE=32 -Wall -Wextra -Wno-unused-parameter -Wno-overloaded-virtual -Wno-unused-variable -Wno-unused-local-typedef -Wno-invalid-offsetof -Wno-deprecated-register -O3  -DNoRepository -ftemplate-depth-100 -I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/finiteVolume/lnInclude 	-I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/meshTools/lnInclude 	-I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/fvOptions/lnInclude 	-I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/transportModels 	-I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/TurbulenceModels/incompressible/lnInclude 	-I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/TurbulenceModels/turbulenceModels/lnInclude -IlnInclude -I. -I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OpenFOAM/lnInclude -I/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OSspecific/POSIX/lnInclude   -fPIC -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk -c fvOptions/KPASource.C -o Make/darwin64ClangDPInt32Opt/fvOptions/KPASource.o
fvOptions/KPASource.C:113:21: error: conversion from 'tmp<Foam::pointField>' (aka 'tmp<Field<Vector<double> > >') to 'const Foam::pointField' (aka 'const Field<Vector<double> >') is ambiguous
                        const pointField probesl = propAxis_.localPosition(probes_);
                                         ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OpenFOAM/lnInclude/tmp.H:153:16: note: candidate function
        inline operator const T&() const;
               ^
/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OpenFOAM/lnInclude/Field.H:224:9: note: candidate constructor
        Field(const tmp<Field<Type>>&);
        ^
fvOptions/KPASource.C:239:15: error: no viable conversion from 'Field<Foam::vector>' to 'Field<Foam::scalar>'
        scalarField& F(KPA_.F());
                     ^ ~~~~~~~~
/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OpenFOAM/lnInclude/UList.H:240:16: note: candidate function
        inline operator const Foam::List<T>&() const;
               ^
fvOptions/KPASource.C:240:15: error: no viable conversion from 'Field<Foam::vector>' to 'Field<Foam::scalar>'
        scalarField& iV(KPA_.iV());
                     ^  ~~~~~~~~~
/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/OpenFOAM/lnInclude/UList.H:240:16: note: candidate function
        inline operator const Foam::List<T>&() const;
               ^
fvOptions/KPASource.C:262:24: error: use of undeclared identifier 'rps'
                        propGeo_.c_str(), &rps, &VM_, &SR_, &rho_, &dia_,
                                           ^
fvOptions/KPASource.C:294:48: error: use of undeclared identifier 'z'
                                const scalar Fy(Fi.y()*Foam::cos(arg) - Fi*z()*Foam::sin(arg));
                                                                           ^
fvOptions/KPASource.C:344:21: error: use of undeclared identifier 'cels_'; did you mean 'cells_'?
                        C[i] = mesh_.C()[cels_[i]];
                                         ^~~~~
                                         cells_
/Users/KGB/OpenFOAM/OpenFOAM-4.1/src/fvOptions/lnInclude/cellSetOption.H:115:19: note: 'cells_' declared here
        labelList cells_;
                  ^
fvOptions/KPASource.C:399:52: error: unexpected ';' before ')'
                propAxis_.localPosition(mesh_.C()[cells_[itrg]]);
                                                                ^
fvOptions/KPASource.C:431:12: error: type 'const Foam::vectorField' (aka 'const Field<Vector<double> >') does not provide a call operator
                num += w*fld(isrc);
                         ^~~
fvOptions/KPASource.C:466:22: warning: relational comparison result unused [-Wunused-comparison]
                for (label iQ=0; iQ<nQ, iQ++)
                                 ~~^~~
fvOptions/KPASource.C:466:31: error: expected ';' in 'for' statement specifier
                for (label iQ=0; iQ<nQ, iQ++)
                                            ^
fvOptions/KPASource.C:561:34: error: out-of-line definition of 'findCell' does not match any declaration in 'Foam::fv::KPASource'
Foam::label Foam::fv::KPASource::findCell
                                 ^~~~~~~~
fvOptions/KPASource.H:188:9: note: member declaration does not match because it is const qualified
                label findCell(const labelList&, const point&) const;
                      ^                                        ~~~~~
fvOptions/KPASource.C:734:2: error: member initializer 'basicSource' does not name a non-static data member or base class
        basicSource(name, modelType, dict, mesh),
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
fvOptions/KPASource.C:737:2: warning: field 'w_' will be initialized after field 'source_' [-Wreorder]
        w_(nR_, nQ_),
        ^
fvOptions/KPASource.C:738:10: warning: base class 'Foam::fv::cellSetOption' is uninitialized when used here to access 'Foam::fv::cellSetOption::cells_' [-Wuninitialized]
        source_(cells_.size()),
                ^
fvOptions/KPASource.C:783:21: error: no member named 'KPASource' in namespace 'Foam'
Foam::autoPtr<Foam::KPASource>
              ~~~~~~^
fvOptions/KPASource.C:784:1: error: no member named 'KPASource' in namespace 'Foam'; did you mean 'Foam::fv::KPASource'?
Foam::KPASource::New()
^~~~~~~~~~~~~~~
Foam::fv::KPASource
fvOptions/KPASource.H:82:7: note: 'Foam::fv::KPASource' declared here
class KPASource
      ^
fvOptions/KPASource.C:786:35: error: no matching constructor for initialization of 'Foam::fv::KPASource'
    return autoPtr<KPASource>(new KPASource);
                                  ^
fvOptions/KPASource.H:194:9: note: candidate constructor not viable: requires 1 argument, but 0 were provided
        KPASource(const KPASource&);
        ^
fvOptions/KPASource.C:726:22: note: candidate constructor not viable: requires 4 arguments, but 0 were provided
Foam::fv::KPASource::KPASource
                     ^
fvOptions/KPASource.C:861:6: error: use of undeclared identifier 'basicSource'
        if (basicSource::read(dict))
            ^
3 warnings and 15 errors generated.
make: *** [Make/darwin64ClangDPInt32Opt/fvOptions/KPASource.o] Error 1
